--- a/src/Home.css
+++ b/src/Home.css
@@ -12,10 +12,16 @@ body {
 }
 
 .Title {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 10px;
   justify-content: center;
   align-items: center;
   color: #fff;
   text-align: center;
+  border: solid black 1px;
+  border-radius: 10px;
 }
 
 .Title h1 {
@@ -26,6 +32,8 @@ body {
 
 .Title Img {
   height: 20vh;
+  width: 20vh;
+  object-fit: cover;
   justify-content: center;
   align-items: center;
   position: inherit;
@@ -42,7 +50,34 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  border: 4px solid #fffaaa;
   object-fit: cover;
   margin-top: 10px;
 }
 
+.Upload-img{
+  display: none;
+}
+
+.custom-upload-btn {
+  display: inline-block;
+  background-color: #000000;
+  color: white;
+  padding: 10px 20px;
+  margin-top: 10px;
+  margin-right: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.name-field {
+  display: inline-block;
+  background-color: #000000;
+  color: white;
+  padding: 10px 20px;
+  margin-top: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+}
