Added an intro also some padding in lobby

--- a/src/Home.css
+++ b/src/Home.css
@@ -81,3 +81,13 @@ body {
   font-size: 1rem;
   border-radius: 5px;
 }
+
+.intro-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: 9999;
+}
